--- a/foundation/core/templates/core/snippets/console_event_list.html
+++ b/foundation/core/templates/core/snippets/console_event_list.html
@@ -1,18 +1,21 @@
 {% load humanize %}
 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
     {% for event in event_list %}
-        {% with service=event.service %}
+        {% with service=event.service event_type=event.event_type %}
         {% if forloop.counter0|divisibleby:"2" %}
             <div id="{{ event.id }}" class="{{ service.project_name_slug }} card subtle-shade" data-base-url="{{ service.url }}">
                 <h3>
                     {% if service.config.logo.name %}
                         <img src="{{ service.config.logo.url }}" width="30" />
                     {% endif %}
-                    <a href="{{ service.url }}">{{ service.project_name }}</a>
+                    <a href="{{ service.url }}" style="cursor: pointer">{{ service.project_name }}</a>
                     <time>{{ event.created_on|naturaltime }}</time>
                 </h3>
-                <div class="{{ event.event_type.codename }}">
-                    <div class="content row" style="margin-top: 15px"></div>
+                <div class="{{ event_type.codename }}">
+                    <div class="content row"{% if event_type.min_height %}
+                         style="min-height: {{ event_type.min_height }}px"{% endif %}>
+                        <div class="col-xs-12">...</div>
+                    </div>
                 </div>
             </div>
         {% endif %}
@@ -21,18 +24,21 @@
 </div>
 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
     {% for event in event_list %}
-        {% with service=event.service %}
+        {% with service=event.service event_type=event.event_type %}
         {% if forloop.counter|divisibleby:"2" %}
             <div id="{{ event.id }}" class="{{ service.project_name_slug }} card subtle-shade" data-base-url="{{ service.url }}">
                 <h3>
                     {% if service.config.logo.name %}
                         <img src="{{ service.config.logo.url }}" width="30" />
                     {% endif %}
-                    <a href="{{ service.url }}">{{ service.project_name }}</a>
+                    <a href="{{ service.url }}" style="cursor: pointer">{{ service.project_name }}</a>
                     <time>{{ event.created_on|naturaltime }}</time>
                 </h3>
-                <div class="{{ event.event_type.codename }}">
-                    <div class="content row" style="margin-top: 15px"></div>
+                <div class="{{ event_type.codename }}">
+                    <div class="content row"{% if event_type.min_height %}
+                         style="min-height: {{ event_type.min_height }}px"{% endif %}>
+                        <div class="col-xs-12">...</div>
+                    </div>
                 </div>
             </div>
         {% endif %}
