--- a/static/ikwen/css/console.css
+++ b/static/ikwen/css/console.css
@@ -1,13 +1,28 @@
 
 #content {padding-top: 80px; min-height: 450px}
-#cover {float: left;width: 100%;overflow: hidden;}
-@media (min-width: 320px) {
-    #cover {background: #fff no-repeat center}
+
+#cover {
+    background: #fff no-repeat center top;
+    float: left;
+    width: 100%;
+    overflow: hidden;
 }
 @media (min-width: 476px) {
     #cover {background-size: 100% auto;}
 }
 #banner {height: 300px; overflow: hidden}
+
+#banner .progress {
+    visibility: hidden;
+}
+
+.qq-upload-list {
+    display: none
+}
+
+#banner .progress-bar {
+    background: #2196F3
+}
 #banner .frame {background: rgba(0, 0, 0, .7); height: 100%; margin: auto; width: 90%; overflow: hidden}
 #banner .photo {background: #fff no-repeat center; background-size: 100%; border: 4px solid #fff; height: 142px; margin: 79px auto; width: 142px}
 #banner .photo img {height: 100%; width: 100%}
@@ -19,7 +34,14 @@
     #banner > .upload-image {margin-left: 625px}
 }
 #banner:hover > .upload-image, #banner .photo:hover .upload-image {display: block}
-#banner h2 {color: #fff; float: left; font-size: 27px; font-weight: 700; margin: 240px 0 0 30px; }
+
+#banner h2 {
+    color: #fff;
+    float: left;
+    font-size: 27px;
+    font-weight: 700;
+    margin: 210px 0 0 30px;
+}
 #banner .frame {float: none; margin: auto; width: 90%}
 @media (min-width: 476px) {
     #banner .frame {float: left; overflow: hidden; width: 240px}
@@ -38,9 +60,34 @@
 #stage .card h3 a {color: #333;}
 #stage .card h3 img {margin-right: 6px}
 #stage .card > div:first-of-type h4 {margin: 0 0 .5em;}
-#stage .card h4 {color: #666;font-size: 17px;margin-top: 30px;}
+
+#stage .card h4 { /*color: #666;*/
+    font-size: 17px;
+    margin-top: 30px;
+}
 #stage .card h4 a.more {color: #0069c3;float: right;font-size: 13px}
 #stage .card .event-media {background-size: cover; float: left; height: 260px; margin: 1em 0; width: 100%}
+
+#stage .card .content {
+    margin-top: 15px
+}
+
+@media (max-width: 414px) {
+    #stage .card .content {
+        margin-top: 20px
+    }
+}
+
+#stage .card:not(.loaded) .content {
+    background: #f5f5f5;
+    margin: 0;
+}
+
+#stage .card:not(.loaded) .content > div {
+    color: #999;
+    font-size: 60px;
+    text-align: center;
+}
 #about ul {margin: 0; padding: 0}
 #about ul li {list-style-type: none; line-height: 25px}
 #about ul li label {width: 90px}
@@ -75,7 +122,12 @@
     #ad-space-right > div {width: 240px}
 }
 
-#ad-space-right h4 {color: #888; font-weight: 700; margin-top: 0; text-decoration: underline}
+#ad-space-right h4 {
+    color: #888;
+    font-weight: 700;
+    margin-top: 0;
+    text-decoration: underline;
+}
 #ad-space-right div#ad {background: #ddd; height: 360px; margin-top: 15px}
 
 #admin-content.embed {background: #fff; height: 850px}
